# packages_updator

./: .gitignore  LICENSE  README.md  release.py
.github/workflows/: publish-to-pypi.yml
update-python-packages/: .gitignore  README.md  pyproject.toml
update-python-packages/src/update_python_packages/: __init__.py
